--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -56,7 +56,7 @@ const isCurrentPageMatch = (sectionUrl: string, currentPage: string): boolean =>
 
 <nav aria-labelledby="grid-left">
   <div class="nav-groups" data-sticky>
-    <DocsPicker />
+    <DocsPicker client:load pathname={Astro.url.pathname} />
     <ul>
       {
         sidebarSections.map((s: { parentSection: Sections; contents: SectionContent[]; section: Sections }) => (
