--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -113,7 +113,7 @@ const isCurrentPageMatch = (sectionUrl: string, currentPage: string): boolean =>
 
   .nav-groups {
     padding: var(--doc-padding) var(--space-8x) var(--doc-padding) 0;
-    max-height: 100vh;
+    height: 100vh;
     max-height: 100dvh;
     top: 0;
     overflow-y: auto;
