--- a/src/components/DocsSwitcher/docsPicker.module.css
+++ b/src/components/DocsSwitcher/docsPicker.module.css
@@ -2,30 +2,36 @@
   box-sizing: border-box;
   display: flex;
   align-items: center;
-  padding: 8px 16px;
-  gap: 8px;
+  padding: 12px 16px;
+  gap: 12px;
+  isolation: isolate;
+  z-index: 100;
   margin-bottom: 20px;
   position: relative;
-  background: #f5f7fd;
-  border: 1px solid #dfe7fb;
+  background: var(--blue-100);
+  border: 1px solid var(--blue-200);
+  color: var(--blue-800);
   border-radius: 8px;
   flex: none;
+  font-size: 19px;
+  font-weight: 500;
   order: 0;
   flex-grow: 0;
   cursor: pointer;
   transition: all 0.2s ease;
+  width: 100%;
 }
 
 .logo {
-  width: 24px;
-  height: 24px;
+  width: 32px;
+  height: 32px;
 }
 
 .caret {
   width: 16px;
   height: 16px;
-  background: #ffffff;
-  border: 1px solid #375bd2;
+  background: white;
+  border: 1px solid var(--blue-600);
   border-radius: 50%;
   position: absolute;
   right: 16px;
@@ -37,31 +43,39 @@
 .caret span {
   width: 4px;
   height: 4px;
-  border-right: 1px solid #375bd2;
-  border-bottom: 1px solid #375bd2;
+  border-right: 1px solid var(--blue-600);
+  border-bottom: 1px solid var(--blue-600);
   transform: rotate(45deg);
+  transition: transform 0.2s ease;
+  margin-bottom: 1px;
 }
 
 .container:hover {
   background: #e9f0ff;
 }
 
+.container:hover .caret span {
+  transform: rotate(-135deg);
+  margin-bottom: -1px;
+}
+
 .menu {
   position: absolute;
-  top: 40px;
+  top: 100%;
   left: 0;
-  width: 200px;
+  width: 100%;
   background: #ffffff;
-  border: 1px solid #dfe7fb;
+  border: 1px solid var(--blue-200);
   border-radius: 8px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 100;
   transition: all 0.2s ease;
+  padding: 8px 12px;
 }
 
-.menu img {
-  width: 24px;
-  height: 24px;
+.icon {
+  width: 20px;
+  height: 20px;
 }
 
 .menu ul {
@@ -72,9 +86,15 @@
   flex-direction: column;
 }
 
-.item a {
-  padding: 8px 16px;
+.link {
   display: flex;
   align-items: center;
-  gap: 16px;
+  font-size: 16px;
+  color: var(--blue-800);
+  padding: 12px 8px;
+  gap: 8px;
+}
+
+.link:hover {
+  color: var(--blue-600);
 }
