--- a/src/components/DocsSwitcher/docsPicker.module.css
+++ b/src/components/DocsSwitcher/docsPicker.module.css
@@ -2,19 +2,19 @@
   box-sizing: border-box;
   display: flex;
   align-items: center;
-  padding: 12px 16px;
-  gap: 12px;
+  padding: var(--space-3x) var(--space-4x);
+  gap: var(--space-3x);
   isolation: isolate;
   z-index: 100;
-  margin-bottom: 20px;
+  margin-bottom: var(--space-5x);
   position: relative;
   background: var(--blue-100);
   border: 1px solid var(--blue-200);
   color: var(--blue-800);
-  border-radius: 8px;
+  border-radius: var(--space-2x);
   flex: none;
   font-size: 19px;
-  font-weight: 500;
+  font-weight: var(--font-weight-medium);
   order: 0;
   flex-grow: 0;
   cursor: pointer;
@@ -23,26 +23,26 @@
 }
 
 .logo {
-  width: 32px;
-  height: 32px;
+  width: var(--space-8x);
+  height: var(--space-8x);
 }
 
 .caret {
-  width: 16px;
-  height: 16px;
+  width: var(--space-4x);
+  height: var(--space-4x);
   background: white;
   border: 1px solid var(--blue-600);
   border-radius: 50%;
   position: absolute;
-  right: 16px;
+  right: var(--space-4x);
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .caret span {
-  width: 4px;
-  height: 4px;
+  width: var(--space-1x);
+  height: var(--space-1x);
   border-right: 1px solid var(--blue-600);
   border-bottom: 1px solid var(--blue-600);
   transform: rotate(45deg);
@@ -66,21 +66,21 @@
   width: 100%;
   background: #ffffff;
   border: 1px solid var(--blue-200);
-  border-radius: 8px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: var(--space-2x);
+  box-shadow: var(--space-0x) var(--space-1x) var(--space-2x) rgba(0, 0, 0, 0.1);
   z-index: 100;
   transition: all 0.2s ease;
-  padding: 8px 12px;
+  padding: var(--space-2x) var(--space-3x);
 }
 
 .icon {
-  width: 20px;
-  height: 20px;
+  width: var(--space-5x);
+  height: var(--space-5x);
 }
 
 .menu ul {
   list-style: none;
-  padding: 8px;
+  padding: var(--space-2x);
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -89,10 +89,10 @@
 .link {
   display: flex;
   align-items: center;
-  font-size: 16px;
+  font-size: var(--space-4x);
   color: var(--blue-800);
-  padding: 12px 8px;
-  gap: 8px;
+  padding: var(--space-3x) var(--space-2x);
+  gap: var(--space-2x);
 }
 
 .link:hover {
