feat: new homepage design

--- a/src/components/Footer/NewsletterCTA.css
+++ b/src/components/Footer/NewsletterCTA.css
@@ -17,6 +17,10 @@
   white-space: nowrap;
 }
 
+.cta-subscribe-h1 {
+  text-align: center;
+}
+
 .newsletter-cta :is(h2) {
   margin-bottom: var(--space-12x);
 }
