--- a/src/features/landing/components/ProductCard.module.css
+++ b/src/features/landing/components/ProductCard.module.css
@@ -5,25 +5,26 @@
 }
 .productCard {
   width: 100%;
-  border: 1px solid #dfe7fb;
   background-color: white;
   border-radius: 10px;
   align-items: center;
-  padding: 32px;
+  padding: var(--space-4x);
   transition: border-color 0.3s, box-shadow 0.3s;
   display: flex;
+  flex-direction: row;
   position: relative;
   overflow: hidden;
   max-width: 100%;
+  border: 1px solid var(--blue-200);
 }
 .productCard:hover {
   border-color: #375bd2;
   box-shadow: 0 8px 12px rgba(26, 43, 107, 0.1);
 }
 .logo {
-  width: 48px;
-  height: 48px;
-  margin-right: 32px;
+  width: var(--space-6x);
+  height: var(--space-6x);
+  margin-right: var(--space-3x);
   align-self: flex-start;
 }
 .content {
@@ -31,15 +32,23 @@
   overflow: visible;
 }
 .heading {
-  color: #375bd2;
   margin-top: 0;
   margin-bottom: 0;
-  font-size: 23px;
   font-weight: 500;
   line-height: 1.3em;
   opacity: 1;
   transition: opacity ease 0.2s;
+  display: flex;
+  align-items: center;
 }
+
+.heading h3 {
+  margin: 0;
+  padding: 0;
+  color: var(--blue-600);
+  font-size: var(--space-4x);
+}
+
 .paragraph,
 .chains {
   display: none;
@@ -66,25 +75,17 @@
   vertical-align: middle;
   display: inline-block;
 }
-.backgroundShape {
-  z-index: 1;
-  width: auto;
-  height: auto;
-  opacity: 0.5;
-  position: absolute;
-  top: auto;
-  bottom: 0;
-  left: auto;
-  right: 0;
-}
 
 @media screen and (min-width: 768px) {
   .heading {
     margin-bottom: 12px;
   }
+  .heading h3 {
+    font-size: var(--space-6x);
+  }
   .paragraph {
     display: block;
-    color: #6d7380;
+    color: var(--gray-600);
     margin-bottom: 0;
     transition: opacity ease 0.2s;
     opacity: 1;
@@ -104,13 +105,13 @@
   }
   .productCard {
     align-items: start;
+    border: none;
+    flex-direction: column;
+    padding: var(--space-8x);
   }
-  .productCardWithTransition:hover .heading,
-  .productCardWithTransition:hover .paragraph {
-    opacity: 0;
-  }
-  .productCardWithTransition:hover .chains {
-    opacity: 1;
-    transform: translateY(0%);
+  .logo {
+    width: var(--space-12x);
+    height: var(--space-12x);
+    margin-right: var(--space-4x);
   }
 }
