--- a/src/features/landing/sections/HeroCTA.astro
+++ b/src/features/landing/sections/HeroCTA.astro
@@ -4,17 +4,7 @@ import button from "@chainlink/design-system/button.module.css"
 
 <section id="hero-cta">
   <div>
-    <h2>Welcome to <span>Chainlink Docs</span></h2>
-    <p>
-      The go-to place for developers who want to learn how to build applications using Chainlink and for node operators
-      wanting useful information on running a Chainlink node.
-    </p>
-
-    <a href="/getting-started/conceptual-overview" class={button.primary}> Get Started</a>
-    <a href="/resources/create-a-chainlinked-project" class={button.secondary}> Starter Kits</a>
-  </div>
-  <div class="hero-image-container">
-    <img src="/images/hero-background.svg" alt="" />
+    <h2>What are you building??</h2>
   </div>
 </section>
 
@@ -33,6 +23,7 @@ import button from "@chainlink/design-system/button.module.css"
     font-weight: 500;
     line-height: 52px;
     letter-spacing: -0.02em;
+    line-break: auto;
   }
   h2 span {
     color: #375bd2;
