feat: Megamenu hover state

--- a/src/components/Header/Nav/ProductNavigation/Desktop/MegaMenu.module.css
+++ b/src/components/Header/Nav/ProductNavigation/Desktop/MegaMenu.module.css
@@ -1,11 +1,10 @@
-.container {
+:global(.megaMenuContainer) {
   z-index: 9999;
-  background-color: rgba(0, 0, 0, 0.2);
   position: fixed;
-  top: 0%;
+  top: 60px;
   bottom: 0%;
-  left: 0%;
-  right: 0%;
+  left: 20px;
+  right: 20px;
   display: flex;
   justify-content: center;
 }
@@ -14,23 +13,24 @@
   max-width: 1360px;
   width: 100%;
   background-color: white;
-  margin-top: 60px;
   height: fit-content;
   border-radius: 0.5rem;
   display: grid;
   grid-template-columns: 3fr 1fr;
   overflow: hidden;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .wrapper::before {
   content: "";
   position: absolute;
-  top: 55px;
+  top: -4px;
   left: 35%;
   transform: translateX(-50%) rotate(45deg);
   width: 20px;
   height: 20px;
   z-index: -1;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   background-color: white;
 }
 
