feat: mobile megamenu

--- a/src/components/Header/Nav/ProductNavigation/Mobile/productNavigation.module.css
+++ b/src/components/Header/Nav/ProductNavigation/Mobile/productNavigation.module.css
@@ -16,8 +16,18 @@
   width: 100vw;
   width: 100dvw;
   display: flex;
+  flex-direction: column;
   overflow: hidden;
   z-index: 11;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: var(--space-6x) var(--space-8x);
+  /* border-bottom: 1px solid var(--gray-200); */
+  box-shadow: 0px 4px 12px 0px #0000000f;
 }
 
 .content {
@@ -34,17 +44,31 @@
   transform: translateX(-100vw);
 }
 
-.closeButton {
-  position: absolute;
-  top: var(--space-6x);
-  right: var(--space-8x);
-  z-index: 12;
+.productContent {
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-4x);
+  padding: var(--space-6x) var(--space-8x);
+}
+
+.productContentLink {
+  font-size: var(--font-size-4x);
+  font-weight: var(--font-weight-medium);
+  color: var(--gray-600);
+  margin-right: var(--space-5x);
+  padding: var(--space-2x) 0;
+  font-size: var(--font-size-4x);
+  display: flex;
+  justify-content: space-between;
+}
+
+.subProductContentPage {
+  overflow: scroll;
 }
 
 .productContent,
 .subProductContent {
   overflow: scroll;
-  padding: var(--space-6x) var(--space-8x);
   list-style: none;
   width: 100vw;
   padding-bottom: 56px;
@@ -52,6 +76,13 @@
 .subProductContent {
   display: flex;
   flex-direction: column;
+}
+
+.subProductContentTitle {
+  font-size: var(--font-size-4x);
+  font-weight: var(--font-weight-medium);
+  color: var(--blue-800);
+  margin-right: var(--space-5x);
 }
 
 @keyframes slideFromLeft {
