--- a/src/components/Header/aiSearch/searchButton.module.css
+++ b/src/components/Header/aiSearch/searchButton.module.css
@@ -12,6 +12,10 @@
   gap: vaR(--space-2x);
 }
 
+.mobile {
+  display: inline;
+}
+
 .default .icon {
   min-width: var(--space-4x);
   height: var(--space-4x);
@@ -30,6 +34,12 @@
 
 .default .shortcut {
   display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 996px) {
@@ -66,9 +76,4 @@
     border: 1px solid var(--border-color-border-primary, #ecedef);
     color: #6d7380;
   }
-}
-
-.bottomBar {
-  width: full;
-  display: flex;
 }
