feat: Docs Product Switcher (#2)
* feat: Docs Product Switcher

* feat: finish the product switcher

* fix: style

* fix: hover effect

* fix: variables

feat: new homepage design (#3)

* feat: new homepage design

* fix: comments

feat: Header (#4)

* feat: Header

* feat: Megamenu

* feat: Megamenu hover state

* feat: Megamenu bottom links

* feat: mobile megamenu

* feat: search button mobile

* fix: remove unused files

* fix: rename megamenu file

* fix: megaMenu css file name

* fix:
- Megamenu hover stuck issue
- Resources link accessibility
- Resources link triangle

* Fix some accessibility

---------

Co-authored-by: Simone Cuomo <simone@thisdot.co>

Update navigation

Nav updates

--- a/src/components/Header/Nav/ProductNavigation/Desktop/productNavigation.module.css
+++ b/src/components/Header/Nav/ProductNavigation/Desktop/productNavigation.module.css
@@ -9,6 +9,73 @@
   display: none;
 }
 
+.navLink {
+  color: var(--gray-600);
+  font-size: var(--space-4x);
+  font-weight: var(--font-weight-medium);
+  padding: 0px 16px;
+  height: 100%;
+  position: relative;
+  transition: all 200ms ease-in-out;
+  user-select: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: var(--space-1x);
+}
+
+.navLink:hover {
+  color: var(--blue-800);
+}
+
+.navLink::before {
+  position: absolute;
+  content: "";
+  width: var(--space-4x);
+  height: var(--space-4x);
+  background-color: var(--blue-500);
+  top: calc(-1 * var(--space-8x));
+  left: 50%;
+  transform: translateX(-50%) rotate(45deg);
+  opacity: 0;
+  transition: all 200ms ease-in-out;
+}
+
+.navLink:hover::before {
+  opacity: 1;
+}
+
+.active {
+  color: var(--blue-800);
+}
+
+.active::before {
+  position: absolute;
+  content: "";
+  width: var(--space-4x);
+  height: var(--space-4x);
+  background-color: var(--blue-500);
+  top: calc(-1 * var(--space-8x));
+  left: 50%;
+  transform: translateX(-50%) rotate(45deg);
+  opacity: 1;
+  transition: all 200ms ease-in-out;
+}
+
+.active::after {
+  content: "";
+  position: absolute;
+  bottom: -35px;
+  right: 35%;
+  transform: translateX(-50%) rotate(45deg);
+  width: 20px;
+  height: 20px;
+  z-index: -1;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  padding: var(--space-2x);
+}
+
 @media screen and (min-width: 768px) {
   .root {
     display: flex;
@@ -128,6 +195,64 @@
 }
 .navigationViewport[data-state="closed"] {
   animation: scaleOut 200ms ease;
+}
+
+.resourcesMenuContent {
+  position: absolute;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  background-color: white;
+  border-radius: var(--border-radius-secondary);
+  box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.15);
+  top: 60px;
+  left: 20px;
+  right: 20px;
+  transform: translateX(-50%);
+}
+
+.resourcesMenuContent::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 50%;
+  transform: translateX(-50%) rotate(45deg);
+  width: 10px;
+  height: 10px;
+  background-color: white;
+  box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.15);
+}
+
+.resourcesMenuContent h2 {
+  font-size: var(--space-3x);
+  font-weight: var(--font-weight-medium);
+  padding-bottom: var(--space-3x);
+  color: var(--gray-500);
+  text-transform: uppercase;
+  border-bottom: 1px solid var(--gray-200);
+}
+
+.resourcesMenuContentMain {
+  padding: var(--space-16x);
+}
+
+.resourcesMenuContentFeatured {
+  padding: var(--space-8x);
+  background-color: var(--gray-100);
+}
+
+.featuredImage {
+  width: 260px !important;
+}
+
+.trigger span {
+  position: relative;
+  color: var(--gray-600) !important;
+  font-size: var(--space-4x);
+  font-weight: var(--font-weight-medium);
+}
+
+.trigger:hover span {
+  color: var(--blue-800) !important;
 }
 
 .arrow {
