--- a/src/components/Header/Nav/navBar.module.css
+++ b/src/components/Header/Nav/navBar.module.css
@@ -20,10 +20,9 @@
   position: relative;
   display: flex;
   justify-content: space-between;
-  padding-block: var(--space-4x);
+  padding-block: var(--space-0x);
+  width: auto;
   height: var(--space-16x);
-  /* max-width: var(--fullwidth-max-width);
-  margin: 0 auto; */
   gap: var(--space-3x);
 }
 
@@ -131,7 +130,7 @@
 }
 
 .quickLinksButton {
-  display: inline;
+  display: none;
   background: none;
   border: var(--border-width-primary) solid transparent;
   cursor: pointer;
@@ -255,6 +254,12 @@
 }
 
 @media screen and (min-width: 768px) {
+  .quickLinksButton {
+    display: inline;
+  }
+}
+
+@media screen and (min-width: 768px) {
   :is(.button) {
     display: flex;
     height: var(--space-10x);
@@ -288,6 +293,7 @@
 
   .rightSection {
     flex-direction: row;
+    justify-content: flex-end;
   }
 
   .quickLinksTooltip {
@@ -302,6 +308,13 @@
 
   .modalContentWrapper {
     width: 80%;
+  }
+}
+
+/* For fixing the layout shifts caused by the search widget */
+@media screen and (min-width: 995px) {
+  .rightSection {
+    width: 340px;
   }
 }
 
