feat: New Header Banner

--- a/src/features/notifications/components/NotificationBanner.astro
+++ b/src/features/notifications/components/NotificationBanner.astro
@@ -3,4 +3,4 @@ import { NotificationData } from "../data"
 import { HeaderBanner } from "./HeaderBanner"
 ---
 
-<HeaderBanner bannerContent={NotificationData} />
+<HeaderBanner bannerContent={NotificationData} client:only="react" />
