update: homepage metadata
fix: remove unused code

--- a/src/layouts/LandingLayout.astro
+++ b/src/layouts/LandingLayout.astro
@@ -1,11 +1,16 @@
 ---
 import BaseLayout from "./BaseLayout.astro"
-import * as CONFIG from "../config"
-
-const formattedContentTitle = `${CONFIG.PAGE.titleFallback} | ${CONFIG.SITE.title}`
 ---
 
-<BaseLayout title={formattedContentTitle}>
+<BaseLayout
+  title="Chainlink Documentation"
+  metadata={{
+    title: "Chainlink Documentation",
+    description:
+      "Simple, clean, and comprehensive documentation for any developer to learn, experiment, and build with the Chainlink platform. Start building now.",
+    image: "/images/og.png",
+  }}
+>
   <main class="layout">
     <slot />
   </main>
