fix: left side nav

--- a/src/components/Header/Nav/navBar.module.css
+++ b/src/components/Header/Nav/navBar.module.css
@@ -310,7 +310,11 @@
     width: 80%;
   }
 
-  .rightSection {
+  .button {
+    display: none;
+  }
+
+  .quickLinksWrapper {
     display: none;
   }
 }
