--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -97,8 +97,9 @@ const includeLinkToWalletScript = !!Astro.props.frontmatter.metadata?.linkToWall
       }
 
       .layout {
-        grid-template-columns: auto auto auto;
+        grid-template-columns: auto 1fr auto;
         gap: var(--gutter);
+        width: 100vw;
         max-width: 1440px;
       }
 
