fix: Heading colors and other minor css issues

--- a/src/components/CCIP/ChainHero/ChainHero.css
+++ b/src/components/CCIP/ChainHero/ChainHero.css
@@ -86,7 +86,7 @@
   font-size: 14px;
   line-height: 22px;
   padding-bottom: var(--space-4x);
-  color: #6c7585;
+  color: var(--gray-500);
 }
 
 .ccip-chain-hero__feeTokens__list {
