--- a/src/components/CCIP/Tables/Table.css
+++ b/src/components/CCIP/Tables/Table.css
@@ -27,13 +27,14 @@
   text-align: start;
   background-color: transparent;
   padding: 0;
-  color: #6c7585;
+  color: var(--gray-500);
   padding-bottom: var(--space-4x);
+  align-content: baseline;
 }
 
 .ccip-table tbody td {
   text-align: start;
-  color: #141921;
+  color: var(--gray-900);
   padding: var(--space-4x) 0;
 }
 
@@ -59,10 +60,10 @@
   border-radius: 24px;
   border: 1px solid var(--Page-Border-Border, #e4e8ed);
   background: var(--Page-Background-Muted, #f5f7fa);
-  color: var(--Page-Foreground-Alt, #141921);
+  color: var(--Page-Foreground-Alt, --gray-900);
 }
 .ccip-table__status svg {
-  stroke: var(--Page-Foreground-Alt, #141921);
+  stroke: var(--Page-Foreground-Alt, --gray-900);
 }
 
 .ccip-table__status-operational {
@@ -113,7 +114,7 @@
   font-size: 22px;
   line-height: 28px;
   padding: 8px;
-  color: #141921;
+  color: var(--gray-900);
   margin-bottom: 0px;
 }
 
