--- a/src/components/CCIP/Tables/Tabs.css
+++ b/src/components/CCIP/Tables/Tabs.css
@@ -11,12 +11,12 @@
   font-weight: 500;
   font-size: 18px;
   line-height: var(--space-4x);
-  color: #6c7585;
+  color: var(--gray-500);
   padding-bottom: 8px;
 }
 
 .tabs__tab--active {
-  color: #141921;
+  color: var(--gray-900);
   padding-bottom: 5px;
   border-bottom: 3px solid #2e7bff;
 }
