--- a/src/components/CCIP/ChainHero/LaneDetailsHero.css
+++ b/src/components/CCIP/ChainHero/LaneDetailsHero.css
@@ -28,6 +28,7 @@
   display: flex;
   align-items: center;
   gap: var(--space-6x);
+  color: var(--gray-900);
 }
 
 .lane-details-hero__network img {
@@ -47,7 +48,7 @@
   font-size: 14px;
   line-height: 22px;
 
-  color: #6c7585;
+  color: var(--gray-500);
 }
 
 .lane-details-hero__token-logo {
