fix: icon sizes & use css variables

--- a/src/components/CCIP/Cards/NetworkCard.css
+++ b/src/components/CCIP/Cards/NetworkCard.css
@@ -1,13 +1,11 @@
 .network-card__container {
   display: flex;
-  /* flex-direction: column;
-align-items: flex-start; */
-  padding: 24px;
-  gap: 16px;
+  padding: var(--space-6x);
+  gap: var(--space-4x);
 
-  background: #ffffff;
-  border: 1px solid #e4e8ed;
-  border-radius: 4px;
+  background: var(--white);
+  border: 1px solid var(--gray-200);
+  border-radius: var(--space-1x);
 }
 
 .network-card__container:hover {
@@ -15,14 +13,14 @@ align-items: flex-start; */
 }
 
 .network-card__container img {
-  width: 40px;
-  height: 40px;
+  width: var(--space-8x);
+  height: var(--space-8x);
 }
 
 .network-card__container h3 {
-  font-size: 16px;
-  font-weight: 500;
-  color: #252e42;
+  font-size: var(--space-4x);
+  font-weight: var(--font-weight-medium);
+  color: var(--gray-950);
   margin-bottom: 0;
 }
 
