--- a/src/components/CCIP/Cards/TokenCard.css
+++ b/src/components/CCIP/Cards/TokenCard.css
@@ -8,7 +8,7 @@
   padding: var(--space-4x);
   gap: var(--space-3x);
   background: #ffffff;
-  border: 1px solid #e4e8ed;
+  border: 1px solid var(--gray-200);
   border-radius: var(--space-1x);
   justify-content: center;
   cursor: pointer;
@@ -19,15 +19,15 @@
 }
 
 .token-card__container img {
-  width: var(--space-10x);
-  height: var(--space-10x);
+  width: var(--space-8x);
+  height: var(--space-8x);
   border-radius: 50%;
 }
 
 .token-card__container h3 {
   font-size: var(--space-4x);
   font-weight: 500;
-  color: #252e42;
+  color: var(--gray-950);
   margin-bottom: 0;
 }
 
